--- a/index.html
+++ b/index.html
@@ -4,11 +4,15 @@
 	<meta charset="UTF-8">
 	<title>Document</title>
 
-	<script src="vendor/react.js"></script>
-    <script src="vendor/react-dom.js"></script>
+	<link rel="stylesheet" href="vendor/css/bootstrap.min.css" />
+	<link rel="stylesheet" href="css/app.css" />
+
+	<script src="vendor/js/react.js"></script>
+    <script src="vendor/js/react-dom.js"></script>
+    <script src="vendor/js/babel.min.js"></script>
 </head>
-<body>
+<body class="container">
 	<div id="root"></div>
-	<script src="js/app.js"></script>
+	<script type="text/babel" src="js/app.js"></script>
 </body>
 </html>
